avro_derive/tests/ui/avro_rs_373_name.stderr
error: #[avro(name = "..")] must match #[serde(rename = "..")], it's also deprecated. Please use only `#[serde(rename = "..")]`
  --> tests/ui/avro_rs_373_name.rs:21:1
   |
21 | #[avro(name = "Something")]
   | ^
